2.0.1

2.0.0
Issue #1596 support URLs in previousApps in Run-AlValidation
Issue #1606 do not prune when creating images
Remove compatibility for ancient generic image versions from New-BcContainer
New function New-BcAuthContext to create an authContext for BC SaaS based on credentials, a refresh token or a device login
New function Renew-BcAuthContext to renew an authContext for BC SaaS if necessary
Added parameteres bcAuthContext and environment to Compile-AppInBcContainer to allow Compile-AppInBcContainer to download symbols from BC SaaS
Added parameteres bcAuthContext and environment to Publish-AppToBcContainer to allow Publish-AppToBcContainer to publish apps to BC SaaS
Issue #1613 wrong display of reclaimed space
Added parameters after and before to Get-BcArtifactUrl to filter out artifacts created before after or after before
Added outcome First to the Select parameter in Get-BcArtifactUrl to allow grabbing the first artifact mathing a filter
Added new function Install-BcAppFromAppSource to install an AppSource App into a BC SaaS environment
Added parameter includeTestRunnerOnly to Import-TestToolkitToBcContainer to allow importing only Test Runner
Added parameteres bcAuthContext and environment to Import-TestToolkitToBcContainer to allow running tests on BC SaaS Sandbox environments (Test Runner is the only app in AppSource at the moment, TestFramework apps will be added)
Added parameteres bcAuthContext and environment to Run-TestsInBcContainer to allow running tests on BC SaaS Sandbox environments
Better stacktrace when exception happens in Invoke-ScriptInBcContainer
Added parameteres bcAuthContext and environment to Run-AlPipeline to allow running a pipeline using BC SaaS Sandbox environments
Issue #1591 added parameter failOn to Run-AlPipeline to allow builds to fail on warnings
Issue #1623 Unable to create BC 16.0 container with tests
Support FilesOnly when generating images
Use FilesOnly generic image for better performance