@@ -1,4 +1,5 @@
 2.0.1
+Issue #1646 Get-BcArtifactUrl has decome a low slower with 2.0.0
 
 2.0.0
 Issue #1596 support URLs in previousApps in Run-AlValidation
